test: for snapshot file block fields